# ImagoTagESL

./: .gitignore  CMakeLists.txt  Readme.md
src/: board.c  board.h  hal.h  main.c
tools/: axsem-flasher.py  iar-cspy-8051.cmake  iar-toolchain.cmake  imagotagScaffold.hex
